2nd try try of fixing navbar logo position on mobile view

--- a/src/Screens/not-found/notFoundStyle.scss
+++ b/src/Screens/not-found/notFoundStyle.scss
@@ -13,8 +13,8 @@
         position: absolute;
         top: 0px;
         left: 0px;
-      //   padding-left: 12px;
-      //   margin-left: 34.148px;
+        padding-left: 12px;
+        margin-left: 34.148px;
         padding-top: 13px;
     }
 
